# flask-template

./: .gitignore  application.py  models.py  pyproject.toml  requirements.txt  test.py
