[tool.poetry]
name = "flask-template-2"
version = "0.1.0"
description = ""
authors = ["nathanganser <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
waitress = "^2.0.0"
flask = "^1.1.2"
flask-sqlalchemy = "^2.5.1"
python-dotenv = "^0.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
